--- a/css/monkey.css
+++ b/css/monkey.css
@@ -9,10 +9,8 @@ html {
 }
 
 /* Write your solution here */
-@media only screen and (min-width:460px )and (max-width:1170px ){
-  #monkey {
-    position: absolute;
-    top: 300px;
-    right:400px;
+@media screen and (max-width: 1170px) and (min-width: 406px){
+  #monkey{
+    top: 0px;
   }
 }
